# meta-project-self_driving_cars_projects

./: .gitignore  README.md
coursera-program_coding_for_everyone_c_and_c++/: CMakeLists.txt
coursera-program_coding_for_everyone_c_and_c++/course1-Programming Fundamentals/week1/: poem.c  week1-assignment.c
coursera-program_coding_for_everyone_c_and_c++/course1-Programming Fundamentals/week1/poem.dSYM/Contents/: Info.plist
coursera-program_coding_for_everyone_c_and_c++/course1-Programming Fundamentals/week1/poem.dSYM/Contents/Resources/DWARF/: poem
coursera-program_coding_for_everyone_c_and_c++/course1-Programming Fundamentals/week2/: a.out  test  test2.c
coursera-program_coding_for_everyone_c_and_c++/course1-Programming Fundamentals/week5/: a.out  w5-test1.c
coursera-program_coding_for_everyone_c_and_c++/course2-Structured Programming/week2/: a.out  week2-exercise_struct.c  week2-test.c
coursera-program_coding_for_everyone_c_and_c++/course2-Structured Programming/week3/: week3-test.c
coursera-program_coding_for_everyone_c_and_c++/course2-Structured Programming/week4/: answer-hw3.txt
coursera-program_coding_for_everyone_c_and_c++/course3-C++ For C Programmers Part A/week5/: quiz1.cpp  quiz2.cpp
coursera-program_coding_for_everyone_c_and_c++/course4-C++ For C Programmers PartB/week1/: for_each_ex1.cpp  numerical_ex1.cpp
coursera-program_self_driving_cars_specialization/: README.md
cv-program_projects/lidar_imu_sensor-fusion/: README.md  代码连接.txt
intorduction-for-point-cloud-point_v1/cloud_viewer/: CMakeLists.txt
intorduction-for-point-cloud-point_v1/icp_pcl/: CMakeLists.txt
intorduction-for-point-cloud-point_v1/pcl_icp_solution/: main.cpp
intorduction-for-point-cloud-point_v1/pcl_intro/: CMakeLists.txt
intorduction-for-point-cloud-point_v1/pcl_intro/src/: main.cpp
intorduction-for-point-cloud-point_v1/pcl_viewer/: main.cpp
intorduction-for-point-cloud_pcl/icp_pcl/: main.cpp
intorduction-for-point-cloud_pcl/pcl_icp_solution/: main.cpp
intorduction-for-point-cloud_pcl_v1/cloud_viewer/: cloud_viewer.cpp  original.pcd
intorduction-for-point-cloud_pcl_v1/icp_pcl/: CMakeLists.txt
intorduction-for-point-cloud_pcl_v1/pcl_icp_solution/: main.cpp
intorduction-for-point-cloud_pcl_v1/pcl_intro/: CMakeLists.txt
intorduction-for-point-cloud_pcl_v1/pcl_viewer/: CMakeLists.txt
introduction-for-point-cloud_open3d/demo/: deer_demo.py
introduction-for-point-cloud_open3d/ransac/: ransac3d.py
(+459 files in other folders)
