cmake_minimum_required(VERSION 3.20)
project(Coding_for_Everyone_C_and_C__)

set(CMAKE_CXX_STANDARD 14)

include_directories("course3-C++ For C Programmers Part A/week5")

add_executable(Coding_for_Everyone_C_and_C__
        "course3-C++ For C Programmers Part A/week5/quiz1.cpp"
        "course3-C++ For C Programmers Part A/week5/quiz1.h")
